# dconfig

./: Julia_Setups.txt  feeds.txt  kernel.py  perl_linux_kernel.pl  perl_uri_parser.pl  perl_uri_parser2.pl  perl_xml_parser.pl  py_text_reader.py  python_linux_kernel.py  python_linux_kernel2.py  thumbnailer.sh
KERNEL/: NEWOPTS.md  config-kernel.sh  kernel-processing.py  kernel.ksym
KERNEL/kernel-config/: ATH9K.md  atheros.md  errors.md  phy0_dma_failed.md
blender/: PYTHON_BLENDER_SETUP.md  blender-app-modules.md  blender-filerender.md  blenderplayer2.md  builder-blender-freecad-kicad.txt  get_blender.bsh  git-blender-checkout-cmake.py
debian/: HISTORY.md  UPDATES.md
ffmpeg/: .asoundrc  PATCHBAY1.qpwgraph  ffmpeg--twitch.md  ffmpeg-encoding-twitch.md  ffmpeg-libs.md  ffmpeg-overlay.md  overlays-ffmpeg.md  pipewire.md  test-ffmpeg.sh  twitch-streamer.py  twitch_streamer2.sh  twitch_streamer3.sh
ffmpeg/FFMPEG_RUNNING/mux-examples/gstream-rust/: Cargo.toml  GST_factory.rs  README.md
ffmpeg/FFMPEG_RUNNING/mux-examples/gstream-rust/src/: main.rs
ffmpeg/FFMPEG_RUNNING/mux-examples/gstream-rust/src/accesibility/: main.rs
git/: GIT_master_rules.txt
linux/: kernel_includes.linux.txt
openwrt/: KEXEC-WRT.md  OPENWRT_MOUNT_EXT4.md  OPENWRT_RESET.md  openwrt_baseurls.txt  opkg-installed.md
systemd/: fancy.service.txt  sysctl-services.txt  systemd-mounts.txt  systemd-security.md  systemd-service.md  systemd-user-units-x11.txt  systemd-user-units.txt  systemv-reboot.md  user-service.md  usermode.md
vcpkg/: LIBS.md  pathsborrar.txt
xorg/: Xorg.txt
(+249 files in other folders)
