[package]
name = "gstream-rust"
version = "0.0.1"
authors = ["Gst program 1"]
autobins = true

[dependencies]
futures = {version="0.3.1"}
#futures-executor = "0.3.21"
gstreamer = "0.18.8"
gstreamer-app = "0.18.7"
executor = "0.8.2"

[[bin]]
name = "program"
path = "src/main.rs"
#name = "main"

#[[bin]]
#name = "basic"